stack/kustomize/overlays/test/00-namespace.yaml
---
  apiVersion: v1
  kind: Namespace
  metadata:
    labels:
      kubernetes.io/metadata.name: test-applications
    name: test-applications
  spec:
    finalizers:
    - kubernetes
