stack/kustomize/overlays/test/01-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  app-gateway
  namespace: dev-applications
  labels:
    app:  app-gateway
spec:
  replicas: 5
  template:
    spec:
      containers:
      - name:  app-gateway
        image: phiroict/training_k8s_rust_gateway:20220813.20.0
        resources:
          requests:
            cpu: 1000m
            memory: 700Mi
          limits:
            cpu: 1000m
            memory: 700Mi

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  app-datasource
  namespace: dev-applications
  labels:
    app:  app-datasource
spec:
  replicas: 5
  template:
    spec:
      containers:
      - name:  app-datasource
        image: phiroict/training_k8s_rust_datasource:20220813.20.0
        resources:
          requests:
            cpu: 1000m
            memory: 1000Mi
          limits:
            cpu: 1000m
            memory: 1000Mi
