stack/kustomize/overlays/test/02-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: dev-applications
spec:
  ports:
  - name: http-gateway
    protocol: TCP
    port: 8000
    targetPort: 8000
